--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -10,13 +10,11 @@
             <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
             <li class="separator">||</li>
             <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
-            <li>||</li>
-            <li><a href="hobby/index.html">Hobby</a></li>
         </ul>
     </nav>
 
     <div class="footer-info">
-        <p id="copyright">Designed by Proud Cobra Enterprises, &copy; 2025</p> ||
+        <p id="copyright">Designed by <a href="../proud-cobra.com" target="_blank">Proud Cobra Enterprises</a>, &copy; 2025</p> ||
         <p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
     </div>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
