--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -26,23 +26,4 @@
                 </ul>
             </nav>
         </header>
-        <script>
-            const projectsMenu = document.querySelector('.projects-menu');
-            const projectsNav = document.querySelector('.projects-nav');
-
-            projectsMenu.addEventListener('mouseenter', () => {
-                projectsNav.style.display = 'flex';
-            });
-
-            projectsMenu.addEventListener('mouseleave', () => {
-                projectsNav.style.display = 'none';
-            });
-
-            projectsNav.addEventListener('mouseenter', () => {
-                projectsNav.style.display = 'flex';
-            });
-
-            projectsNav.addEventListener('mouseleave', () => {
-                projectsNav.style.display = 'none';
-            });
-        </script>
+        <script src="scripts/secondary_nav.js"></script>
