--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -2,14 +2,27 @@ html {
     box-sizing: border-box;
 }
 
-body, main, header, footer, nav, ul, li, a, button, input, textarea, select {
+body,
+main,
+header,
+footer,
+nav,
+ul,
+li,
+a,
+button,
+input,
+textarea,
+select {
     box-sizing: inherit;
 }
 
 body {
     background-color: #282c34;
     color: #d1d5db;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
     line-height: 1.6;
     margin: 0;
 }
@@ -33,7 +46,9 @@ a:focus {
     outline: 2px solid #66bb6a;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: #98c379;
 }
 
@@ -130,7 +145,8 @@ main ul li strong {
     color: #98c379;
 }
 
-.footer-items, footer nav ul {
+.footer-items,
+footer nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,7 +159,8 @@ main ul li strong {
     margin: 0 10px;
 }
 
-.footer-items a, footer nav ul li a {
+.footer-items a,
+footer nav ul li a {
     color: #66bb6a;
 }
 
@@ -168,7 +185,8 @@ footer nav ul li:not(.separator):hover {
     margin: 0 10px;
 }
 
-#validation_link_html, #validation_link_css {
+#validation_link_html,
+#validation_link_css {
 display: block;
 text-align: center;
 margin: 10px auto;
@@ -193,10 +211,12 @@ margin: 10px auto;
     main {
         padding: 5px 10px;
     }
+
     nav > ul {
         flex-direction: column;
         align-items: stretch;
     }
+
     nav > ul > li {
         text-align: center;
         margin: 5px 0;
@@ -209,7 +229,8 @@ margin: 10px auto;
     }
 }
 
-header, footer {
+header,
+footer {
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -222,14 +243,20 @@ header, footer {
     background-color: #282828;
     padding: 10px 20px;
     border: 1px solid #555;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 10;
-    flex-direction: column; /* For vertical layout of the links */
+    flex-direction: column;
     min-width: 200px;
+    margin-top: 0;
 }
 
 .projects-menu {
-    position: relative; /* Make sure the dropdown is positioned relative to this */
+    position: relative;
+    display: inline-block;
+}
+
+.projects-menu .down-arrow {
+    margin-left: 5px;
 }
 
 .projects-nav ul {
@@ -239,6 +266,7 @@ header, footer {
     margin: 0;
     list-style: none;
 }
-.projects-nav ul li{
+
+.projects-nav ul li {
     margin: 0 10px;
 }
