--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,11 +13,11 @@
                         <span class="down-arrow">&#9660;</span>
                         <nav class="projects-nav">
                             <ul>
-                                <li><a href="#">Project 1</a></li>
+                                <li><a href="hobby/index.html" target="_blank">Hobby</a></li>
                                 <li>||</li>
-                                <li><a href="#">Project 2</a></li>
+                                <li><a href="/proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
                                 <li>||</li>
-                                <li><a href="#">Project 3</a></li>
+                                <li><a href="../whimsical/about.html">Proud Cobra Mining</a></li>
                             </ul>
                         </nav>
                     </li>
