--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -247,6 +247,8 @@ footer {
     z-index: 10;
     white-space: nowrap;
     margin-top: 0;
+    display: flex;
+    flex-direction: row;
 }
 
 .projects-menu {
