--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,7 +15,7 @@
                             <ul>
                                 <li><a href="hobby/index.html" target="_blank">Hobby</a></li>
                                 <li>||</li>
-                                <li><a href="/proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
+                                <li><a href="proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
                                 <li>||</li>
                                 <li><a href="../whimsical/about.html">Proud Cobra Mining</a></li>
                             </ul>
