Updated secondary nav (debugging)

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -249,6 +249,7 @@ footer {
     margin-top: 0;
     display: flex;
     flex-direction: row;
+    min-width: fit-content; /* Add this line */
 }
 
 .projects-menu {
