--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,7 +17,7 @@
                                 <li>||</li>
                                 <li><a href="proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
                                 <li>||</li>
-                                <li><a href="../whimsical/about.html">Proud Cobra Mining</a></li>
+                                <li><a href="../whimsical/about.html" target="_blank">Proud Cobra Mining</a></li>
                             </ul>
                         </nav>
                     </li>
