--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -28,7 +28,7 @@ body {
 }
 
 a {
-    color: #8bc34a;  /* Changed link color */
+    color: #8bc34a;
     text-decoration: none;
 }
 
@@ -249,7 +249,7 @@ footer {
     margin-top: 0;
     display: flex;
     flex-direction: row;
-    min-width: fit-content; /* Add this line */
+    min-width: fit-content;
 }
 
 .projects-menu {
