--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -248,7 +248,8 @@ footer {
     white-space: nowrap;
     margin-top: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: flex-start;
     min-width: fit-content;
 }
 
@@ -263,7 +264,7 @@ footer {
 
 .projects-nav ul {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 0;
     margin: 0;
     list-style: none;
