--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -14,7 +14,7 @@
     </nav>
 
     <div class="footer-info">
-        <p id="copyright">Designed by <a href="../proud-cobra.com" target="_blank">Proud Cobra Enterprises</a>, &copy; 2025</p> ||
+        <p id="copyright">Designed by <a href="proud-cobra.com/index.html" target="_blank">Proud Cobra Enterprises</a>, &copy; 2025</p> ||
         <p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
     </div>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
