--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -14,10 +14,9 @@
                         <nav class="projects-nav">
                             <ul>
                                 <li><a href="hobby/index.html" target="_blank">Hobby</a></li>
-                                <li>||</li>
                                 <li><a href="proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
-                                <li>||</li>
                                 <li><a href="../whimsical/about.html" target="_blank">Proud Cobra Mining</a></li>
+                                <li><a href="byo_intro.html" target="_blank">BYO</a></li>
                             </ul>
                         </nav>
                     </li>
