--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -236,7 +236,7 @@ footer {
 }
 
 .projects-nav {
-    display: none;
+    display: none; /* Hide by default */
     position: absolute;
     top: 100%;
     left: 0;
@@ -247,7 +247,6 @@ footer {
     z-index: 10;
     white-space: nowrap;
     margin-top: 0;
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
     min-width: fit-content;
