--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,6 +17,7 @@
                                 <li><a href="proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
                                 <li><a href="../whimsical/about.html" target="_blank">Proud Cobra Mining</a></li>
                                 <li><a href="byo_intro.html" target="_blank">BYO</a></li>
+                                <li><a href="stuff/My Terrible þ@ge01 .html" target="_blank">CRAPPY</a></li>
                             </ul>
                         </nav>
                     </li>
