Added Tables link

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,6 +18,7 @@
                                 <li><a href="../whimsical/about.html" target="_blank">Proud Cobra Mining</a></li>
                                 <li><a href="byo_intro.html" target="_blank">BYO</a></li>
                                 <li><a href="stuff/My Terrible þ@ge01 .html" target="_blank">CRAPPY</a></li>
+                                <li><a href="tables.html" target="_blank">Tables</a></li>
                             </ul>
                         </nav>
                     </li>
