--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -35,7 +35,7 @@ a {
 a:hover {
     text-decoration: underline;
     color: #81c784;
-    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 a:visited {
