--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -292,7 +292,7 @@ form table {
 
 form td:first-child {
     width: 30%;
-    padding-right: 10px;
+/*     padding-right: 10px; */
     vertical-align: top;
 }
 
