--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -23,9 +23,11 @@
                     <li>||</li>
                     <li><a href="website-evalutations.html">Evaluations</a></li>
                     <li>||</li>
+                    <li><a href="byo_intro.html">BYO</a></li>
+                    <li>||</li>
                     <li><a href="tables.html">Tables</a></li>
                     <li>||</li>
-                    <li><a href="byo_intro.html">BYO</a></li>
+                    <li><a href="forms.html">Forms</a></li>
                 </ul>
             </nav>
         </header>
